--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
         </plugins>
@@ -29,6 +29,12 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
             <version>4.3.14.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>vislab.no.ntnu</groupId>
+            <artifactId>Vislab-Devices</artifactId>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/resources/Vislab-Devices-1.0-SNAPSHOT.jar</systemPath>
         </dependency>
     </dependencies>
 
