--- a/pom.xml
+++ b/pom.xml
@@ -33,8 +33,7 @@
         <dependency>
             <groupId>vislab.no.ntnu</groupId>
             <artifactId>Vislab-Devices</artifactId>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/src/main/resources/Vislab-Devices-1.0-SNAPSHOT.jar</systemPath>
+            <version>0.8.0</version>
         </dependency>
     </dependencies>
 
