--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>DenonDN500AV</groupId>
-    <artifactId>DenonDN500AV</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>vislab.no.ntnu.plugins</groupId>
+    <artifactId>denon-dn500av-plugin</artifactId>
+    <version>0.8.0</version>
     <build>
         <plugins>
             <plugin>
